# avcpm

./: .vault-search.db  AGENTS.md  AGENT_AUTH_INTEGRATION_REPORT.md  AVCPM.md  AVCPM_DESIGN.md  AVCPM_PHASE2_PLAN.md  CHANGELOG.md  CODE_REVIEW_ARCHITECTURE.md  CODE_REVIEW_PERFORMANCE.md  CODE_REVIEW_SECURITY.md  CODE_REVIEW_TESTING.md  HEARTBEAT.md  IDENTITY.md  KEY_ENCRYPTION_CHANGES.md  LEDGER_INTEGRITY_REPORT.md  MEMORY.md  PATH_TRAVERSAL_FIXES.md  PATH_TRAVERSAL_INTEGRATION_REPORT.md  PHASE2_PLAN.md  PHASE3_PLAN.md  README.md  SECURITY_ASSESSMENT_B_PLUS_TO_A.md  SYMLINK_SECURITY_CHANGES.md  TEAM_WORKFLOW_GUIDE.md  TOOLS.md  USER.md  WIKI.md  automation-analysis.md  automation-search-analysis.md  avcpm_a_grade_roadmap.md  avcpm_agent.py  avcpm_audit.py  avcpm_auth.py  avcpm_branch.py  avcpm_cli.py  avcpm_commit.py  avcpm_conflict.py  avcpm_diff.py  avcpm_exceptions.py  avcpm_ledger_integrity.py  (+44 more)
.learnings/: CRON_LOG.md  ERRORS.md  LEARNINGS.md  PERFORMANCE.md
.obsidian/: app.json  editor.json  templates.json
.openclaw/: workspace-state.json
avcpm_commands/: __init__.py  agent.py  branch.py  commit.py  conflict.py  diff.py  merge.py  rollback.py  status.py  task.py  validate.py  wip.py
graphify-out/: .graphify_analysis.json  .graphify_root  GRAPH_REPORT.md  graph.html  graph.json  manifest.json
memory/: 2026-04-19-request-timed-out-before-a-res.md  2026-04-20-dev-team-checkin.md  2026-04-20-request-timed-out-before-a-res.md  index.md
presentations/: convert.js  openclaw-knowledge-management-system.md  presentation.html
raw/: llmwiki-vs-graphify.md  (+4 more)
(+71 files in other folders)
